@@ -288,13 +288,13 @@
                     </a>
                 </li>
                 <li>
-                    <a class="ui-btn ui-icon-home ui-btn-icon-left" href="#page_home" data-locale-id="bottombar_button_home" data-transition="slide" data-direction="reverse">
+                    <a class="ui-btn ui-icon-home ui-btn-icon-left" href="#page_control" data-locale-id="bottombar_button_home" data-transition="none" data-direction="reverse">
                         Home
                     </a>
                 </li>
                 <li>
-                    <a data-locale-id="configure_menu_system" class="ui-btn ui-icon-gear ui-btn-icon-right" href="#page_configure_interfaces" data-transition="slide" data-direction="reverse">
-                        Settings
+                    <a class="ui-btn ui-icon-none ui-btn-icon-none" data-transition="none" data-direction="reverse" href="javascript:$(this).blur();void(0);">
+                    &nbsp;
                     </a>
                 </li>
             </ul>
