@@ -464,14 +464,14 @@
             <li><a class="ui-btn ui-btn-icon-left ui-icon-home" data-locale-id="home_menu_home" href="#page_control" data-transition="none">Home</a></li>
             <li><a class="ui-btn ui-btn-icon-left ui-icon-cloud" data-locale-id="home_menu_statistics" href="#page_analyze" data-transition="none">Statistics</a></li>
             <li data-locale-id="home_menu_automation" data-role="list-divider">Automation</li>
-            <li><a class="ui-btn ui-btn-icon-left ui-icon-bars" data-locale-id="home_menu_programeditor" href="#page_configure_automationgroups" data-transition="none">Program Editor</a></li>
-            <li><a class="ui-btn ui-btn-icon-left ui-icon-edit" data-locale-id="home_menu_widgeteditor" href="#page_configure_widgetlist" data-transition="none">Widget Editor</a></li>
+            <li><a class="ui-btn ui-btn-icon-left ui-icon-bars" data-locale-id="home_menu_programeditor" href="#page_configure_automationgroups" data-transition="none">Programs</a></li>
+            <li><a class="ui-btn ui-btn-icon-left ui-icon-edit" data-locale-id="home_menu_widgeteditor" href="#page_configure_widgetlist" data-transition="none">Widgets</a></li>
             <li><a class="ui-btn ui-btn-icon-left ui-icon-clock" data-locale-id="home_menu_scheduler" href="#page_configure_schedulerservice" data-transition="none">Scheduler</a></li>
             <li data-locale-id="home_menu_system" data-role="list-divider">System</li>
             <li><a class="ui-btn ui-btn-icon-left ui-icon-gear" data-locale-id="home_menu_settings" href="#page_configure_interfaces" data-transition="none">Settings</a></li>
             <li><a class="ui-btn ui-btn-icon-left ui-icon-check" data-locale-id="home_menu_maintenance" href="#page_configure_maintenance" data-transition="none">Maintenance</a></li>
             <li data-locale-id="home_menu_about" data-role="list-divider">About</li>
-            <li><a class="ui-btn ui-icon-carat-r ui-btn-icon-left" href="javascript:HG.System.UpdateManager.UpdateCheck()"><span data-locale-id="home_menu_about_version">Version</span> 1.0 beta (r491)</a></li>
+            <li><a class="ui-btn ui-icon-carat-r ui-btn-icon-left" href="javascript:HG.System.UpdateManager.UpdateCheck()"><span data-locale-id="home_menu_about_version">Version</span> 1.0 beta (r491-p1)</a></li>
             <li><a class="ui-btn ui-icon-info ui-btn-icon-left" data-locale-id="home_menu_about_userguide" target="_blank" href="http://www.homegenie.it/docs/quickstart.php">Users Guide</a></li>
             <li><a class="ui-btn ui-icon-info ui-btn-icon-left" data-locale-id="home_menu_about_programming" target="_blank" href="http://www.homegenie.it/docs/automation_getstarted.php">Programming Guide</a></li>
             <li><a class="ui-btn ui-icon-comment ui-btn-icon-left" data-locale-id="home_menu_about_forum" target="_blank" href="http://www.homegenie.it/forum">Users Forum</a></li>
