@@ -784,9 +784,9 @@
     "home_menu_automation":
         "Automazione",
     "home_menu_programeditor":
-        "Editor Programmi",
+        "Programmi",
     "home_menu_widgeteditor":
-        "Editor Widget",
+        "Widget",
     "home_menu_scheduler":
         "Pianificazione",
     "home_menu_system":
