@@ -780,9 +780,9 @@
     "home_menu_automation":
         "Automation",
     "home_menu_programeditor":
-        "Program Editor",
+        "Programs",
     "home_menu_widgeteditor":
-        "Widget Editor",
+        "Widgets",
     "home_menu_scheduler":
         "Scheduler",
     "home_menu_system":
