@@ -1,11 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <ReleaseInfo xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <Name>HomeGenie</Name>
-  <Version>1.00 beta r491</Version>
+  <Version>1.00 beta r491-p1</Version>
   <Description>Latest public release.</Description>
-  <ReleaseNote>   - Fixed issue #134 (cost per unit not saved)
-  - Restyled UI navigation. Added side menu (opens by clicking the upper left HomeGenie button)
-  - Improved Sensor, Switch and Shutter widgets (PR #172 #173 #174)
-  - Fixed Statistics Engine bug with parsing/passing wrong timerange values (resulting in totally wrong graphics)</ReleaseNote>
-  <ReleaseDate>2015-05-31T12:31:09.0000Z</ReleaseDate>
+  <ReleaseNote>   - Fix to minor issues of new UI</ReleaseNote>
+  <ReleaseDate>2015-06-01T08:44:35.0000Z</ReleaseDate>
 </ReleaseInfo>
